--- a/index.html
+++ b/index.html
@@ -3,78 +3,77 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>AI Stock Guru — Trading Terminal</title>
-
-  <!-- lightweight charts -->
-  <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
-
+  <title>AI Stock Guru — Dashboard (NSE & BSE)</title>
   <link rel="stylesheet" href="style.css"/>
+  <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
 </head>
 <body>
-  <div class="app">
-    <header class="topbar">
-      <div class="brand">AI Stock Guru — Trading Terminal (NSE & BSE)</div>
-      <div class="controls">
-        <select id="mode"><option value="intraday">Intraday (5m)</option><option value="swing" selected>Swing (Daily)</option></select>
-        <input id="search" placeholder="Search symbol (e.g. RELIANCE.NS)" />
-        <button id="addBtn">Add</button>
+  <div class="dashboard">
+    <header class="header">
+      <div class="brand">
+        <h1>AI Stock Guru</h1>
+        <div class="tag">NSE & BSE — Dashboard</div>
+      </div>
+      <div class="header-controls">
+        <input id="globalSearch" placeholder="Search symbol (e.g. RELIANCE.NS)" />
+        <select id="modeSelect"><option value="intraday">Intraday (5m)</option><option value="swing" selected>Swing (Daily)</option></select>
         <button id="analyzeBtn" class="primary">Analyze</button>
-        <label class="switch"><input id="darkToggle" type="checkbox"/><span>Dark</span></label>
+        <button id="refreshBtn">Refresh</button>
+        <label class="small muted" id="status">Idle</label>
       </div>
     </header>
 
-    <main class="main-grid">
-      <section class="left-panel">
-        <div class="card">
-          <div class="card-head">
-            <h3>Universe (editable)</h3>
-            <div class="small">You can paste comma-separated symbols or use Add.</div>
+    <div class="layout">
+      <aside class="left">
+        <section class="card">
+          <h3>Market Overview</h3>
+          <div class="market-row">
+            <div class="metric"><div class="m-title">NIFTY</div><div id="niftyVal">—</div></div>
+            <div class="metric"><div class="m-title">BANKNIFTY</div><div id="bankVal">—</div></div>
+            <div class="metric"><div class="m-title">SENSEX</div><div id="sensexVal">—</div></div>
           </div>
-          <textarea id="universe" placeholder="Leave blank to use default NIFTY sample..."></textarea>
-          <div class="row" style="margin-top:8px">
-            <input id="capital" placeholder="Capital ₹" value="100000"/>
-            <input id="risk" placeholder="Risk %" value="1"/>
-            <input id="topN" placeholder="Top N" value="30"/>
-            <button id="scanBtn">Scan Universe</button>
-          </div>
-        </div>
+        </section>
 
-        <div class="card">
-          <h3>Top Picks</h3>
-          <div id="leaderboard">No results yet — click Analyze / Scan</div>
-        </div>
+        <section class="card">
+          <h3>Top Picks (Intraday)</h3>
+          <div id="topIntraday">No data — click Analyze</div>
+        </section>
 
-        <div class="card">
-          <h3>Activity / Logs</h3>
-          <pre id="logs" class="logs">Logs will appear here.</pre>
-        </div>
-      </section>
+        <section class="card">
+          <h3>Top Picks (Swing)</h3>
+          <div id="topSwing">No data — click Analyze</div>
+        </section>
+      </aside>
 
-      <aside class="right-panel">
-        <div class="card">
+      <main class="main">
+        <section class="card chart-card">
           <div class="chart-head">
             <div>
-              <h3 id="chartTitle">Select a symbol</h3>
-              <div class="muted" id="chartSubtitle">—</div>
+              <h2 id="chartTitle">Select a symbol</h2>
+              <div class="muted" id="chartSub">—</div>
             </div>
-            <div class="actions">
-              <button id="refreshChart">Refresh</button>
-              <button id="downloadCSV">Export CSV</button>
+            <div class="chart-controls">
+              <input id="symbolInput" placeholder="Type symbol & press Add (e.g. RELIANCE.NS)" />
+              <button id="addSymbolBtn">Add</button>
+              <button id="plotBtn">Plot</button>
             </div>
           </div>
-          <div id="chart" style="height:420px"></div>
-        </div>
+          <div id="chartContainer"></div>
+        </section>
 
-        <div class="card">
-          <h3>Recommendation</h3>
-          <pre id="explain">Select a top pick to view analysis and rationale.</pre>
-        </div>
-      </aside>
-    </main>
+        <section class="card info-card">
+          <h3>AI Analysis</h3>
+          <div id="analysisArea">Select a stock to see recommendation, targets, stop-loss and rationale.</div>
+        </section>
 
-    <footer class="footer">© 2025 AI Stock Guru — Demo. Data via Yahoo Finance public endpoints.</footer>
+      </main>
+    </div>
+
+    <footer class="footer">
+      <div>© 2025 AI Stock Guru — Dashboard • Demo (uses Yahoo public endpoints)</div>
+    </footer>
   </div>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
