--- a/index.html
+++ b/index.html
@@ -3,75 +3,76 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>AI Stock Guru — Dashboard (NSE & BSE)</title>
+  <title>AI Stock Guru — Pro Live</title>
   <link rel="stylesheet" href="style.css"/>
+  <!-- Lightweight charts for candlesticks -->
   <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
 </head>
 <body>
-  <div class="dashboard">
-    <header class="header">
-      <div class="brand">
-        <h1>AI Stock Guru</h1>
-        <div class="tag">NSE & BSE — Dashboard</div>
-      </div>
-      <div class="header-controls">
-        <input id="globalSearch" placeholder="Search symbol (e.g. RELIANCE.NS)" />
-        <select id="modeSelect"><option value="intraday">Intraday (5m)</option><option value="swing" selected>Swing (Daily)</option></select>
-        <button id="analyzeBtn" class="primary">Analyze</button>
-        <button id="refreshBtn">Refresh</button>
-        <label class="small muted" id="status">Idle</label>
-      </div>
-    </header>
-
-    <div class="layout">
-      <aside class="left">
-        <section class="card">
-          <h3>Market Overview</h3>
-          <div class="market-row">
-            <div class="metric"><div class="m-title">NIFTY</div><div id="niftyVal">—</div></div>
-            <div class="metric"><div class="m-title">BANKNIFTY</div><div id="bankVal">—</div></div>
-            <div class="metric"><div class="m-title">SENSEX</div><div id="sensexVal">—</div></div>
-          </div>
-        </section>
-
-        <section class="card">
-          <h3>Top Picks (Intraday)</h3>
-          <div id="topIntraday">No data — click Analyze</div>
-        </section>
-
-        <section class="card">
-          <h3>Top Picks (Swing)</h3>
-          <div id="topSwing">No data — click Analyze</div>
-        </section>
-      </aside>
-
-      <main class="main">
-        <section class="card chart-card">
-          <div class="chart-head">
-            <div>
-              <h2 id="chartTitle">Select a symbol</h2>
-              <div class="muted" id="chartSub">—</div>
-            </div>
-            <div class="chart-controls">
-              <input id="symbolInput" placeholder="Type symbol & press Add (e.g. RELIANCE.NS)" />
-              <button id="addSymbolBtn">Add</button>
-              <button id="plotBtn">Plot</button>
-            </div>
-          </div>
-          <div id="chartContainer"></div>
-        </section>
-
-        <section class="card info-card">
-          <h3>AI Analysis</h3>
-          <div id="analysisArea">Select a stock to see recommendation, targets, stop-loss and rationale.</div>
-        </section>
-
-      </main>
+  <div class="topbar">
+    <div class="brand">AI Stock Guru — Pro Live (NSE & BSE)</div>
+    <div class="controls">
+      <input id="searchInput" placeholder="Search symbol (RELIANCE.NS)"/>
+      <select id="tabSelect">
+        <option value="intraday">Intraday</option>
+        <option value="short">Short-Term</option>
+        <option value="alerts">AI Alerts</option>
+      </select>
+      <label class="switch"><input id="modeToggle" type="checkbox"/><span id="modeLabel">Live</span></label>
+      <button id="goBtn">Analyze</button>
+      <button id="voiceBtn" title="Play latest alerts">🔊 Voice</button>
+      <label id="status">Status: Ready</label>
     </div>
+  </div>
 
-    <footer class="footer">
-      <div>© 2025 AI Stock Guru — Dashboard • Demo (uses Yahoo public endpoints)</div>
-    </footer>
+  <div class="container">
+    <aside class="sidebar">
+      <div class="card">
+        <h4>Market Overview</h4>
+        <div class="metrics">
+          <div><div class="m-title">NIFTY</div><div id="nifty">—</div></div>
+          <div><div class="m-title">BANKNIFTY</div><div id="banknifty">—</div></div>
+          <div><div class="m-title">SENSEX</div><div id="sensex">—</div></div>
+        </div>
+      </div>
+
+      <div class="card" id="intradayCard">
+        <h4>Top 10 Intraday</h4>
+        <div id="intradayList">No data. Click Analyze (Intraday).</div>
+      </div>
+
+      <div class="card" id="shortCard">
+        <h4>Top 10 Short-Term</h4>
+        <div id="shortList">No data. Click Analyze (Short-Term).</div>
+      </div>
+
+      <div class="card" id="alertsCard">
+        <h4>AI Alerts (live)</h4>
+        <div id="alertsList">No alerts yet.</div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <div class="card chartCard">
+        <div class="chartHeader">
+          <div>
+            <h2 id="chartTitle">Select a stock</h2>
+            <div id="chartSubtitle" class="muted">Interactive candlestick + indicators</div>
+          </div>
+          <div class="chartControls">
+            <input id="symbolInput" placeholder="e.g. RELIANCE.NS"/>
+            <button id="addSymbol">Add</button>
+            <button id="plotSymbol">Plot</button>
+          </div>
+        </div>
+        <div id="chart" style="height:420px;background:#fff;border-radius:6px;overflow:hidden"></div>
+      </div>
+
+      <div class="card analysisCard">
+        <h3>AI Analysis</h3>
+        <div id="analysis">Select a stock to view recommendation.</div>
+      </div>
+    </main>
   </div>
 
 <script src="script.js"></script>
